# twemoji-font

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  LICENSE.md  README.md  knope.toml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.changeset/: add-knope-release-flow.md  inital_release.md  package-deps-cleanup.md  remove-node-engine-requirement.md
.github/workflows/: check-upstream.yml  prepare-release.yml  quality-checks.yml  release.yml
docs/plans/: 2026-04-15-deterministic-build-design.md
extras/: ligatures.json
overrides/: README.overrides
scripts/: build-font.ts
scripts/font/: add-variation-selector-mappings.py  build-raw-font.ts  fontforge-generate.py  fontforge-runner.ts  normalize-font-metadata.py
scripts/layerize/: emoji-variation-sequences.ts  layerize-order.ts  layerize-svg.ts  layerize.ts  normalize-svg.ts
scripts/package/: build-package.ts  build-release-assets.ts  smoke-test-package.ts
scripts/upstream/: check-upstream.ts  publish-prepare.ts  twemoji-source.ts
scripts/verify/: check-build-repeatability.ts
src/: index.css
tests/: build-logging.test.ts  emoji-variation-sequences.test.ts  fontforge-runner.test.ts  layerize-normalization.test.ts  layerize-order.test.ts  layerize-source-audit.test.ts  layerize-svg.test.ts  package.test.ts  release-assets.test.ts  repeatability.test.ts  repo-layout.test.ts  tooling-surface.test.ts  upstream.test.ts  workflows.test.ts
types/: modules.d.ts
