[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "twemoji-font-build-tools"
version = "0.0.0"
description = "Python build helpers for @sableclient/twemoji-font"
requires-python = ">=3.11"
dependencies = ["fonttools[woff]>=4.60.0", "ttfautohint-py>=0.6.0"]

[tool.setuptools]
py-modules = []
